--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="topnavbar">
-            <a class="active" href="1.html">Home</a>
+            <a class="active" href="Index.html">Home</a>
             <a href="3.html">Game</a>
             <a href="4.html">To do</a>
           </div>
