--- a/Game.html
+++ b/Game.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="Main.css" type="text/css">
+        <link rel="icon" href="House.png" type="image/x-icon">
     </head>
     <body>
         <div class="topnavbar">
