--- a/Game.html
+++ b/Game.html
@@ -44,6 +44,12 @@
         <div id="caveleave" class="teleport1"></div>
         <div id="caveblocker2" class="obstacle"></div>
         <div id="caveblocker3" class="obstacle"></div>
+        <div id="RandomMover1" class="RandomMover"></div>
+        <div id="RandomMover2" class="RandomMover"></div>
+        <div id="rock7"></div>
+        <div id="rock7hitbox" class="obstacle"></div>
+        <div id="rock8"></div>
+        <div id="rock8hitbox" class="obstacle"></div>
     </div>
     <script type="text/javascript" src="Game.js"></script>
 </html>
