--- a/Game.html
+++ b/Game.html
@@ -56,12 +56,12 @@
     </div>
     <br>
     <div id="button-container">
-        <button id="upButton" class="control-button up-button">Up</button>
+        <button type="button" id="upButton" class="control-button up-button">Up</button>
     </div>
     <div id="button-container">
-        <button id="leftButton" class="control-button left-button">Left</button>
-        <div><button id="downButton" class="control-button">Down</button></div>
-        <button id="rightButton" class="control-button">Right</button>
+        <button type="button" id="leftButton" class="control-button left-button">Left</button>
+        <div><button type="button" id="downButton" class="control-button">Down</button></div>
+        <button type="button" id="rightButton" class="control-button">Right</button>
     </div>
     </body>
     <script type="text/javascript" src="Game.js"></script>
