--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a class="active" href="index.html">Home</a>
             <a href="Game.html">Game</a>
             <a href="Todo.html">To do</a>
+            <a href="Bootstrap.html">Bootstrap</a>
           </div>
           <script type="text/javascript" src="Home.js"></script>
     </body>
