--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -17,7 +17,7 @@
         </div>
 
     <div class="center">
-        <p class="">JavaScript type conversions</p>
+        <p class="text-secondary">JavaScript type conversions</p>
         <table class="table">
             <tr class="table-secondary">
                 <th>left operand</th>
