--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -36,15 +36,49 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-md-9">
+            <div class="row">
+              <div class="col">
+                <p class="h1">Bootstrap</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Introduction to Bootstrap</p>
+                <p>Bootstrap is a popular front-end framework for developing responsive and mobile-first websites and web applications.
+                  Initially developed by Mark Otto and Jacob Thornton at Twitter, it was released as an open-source project in 2011.
+                  Bootstrap provides developers with a comprehensive set of HTML, CSS, and JavaScript components,
+                  allowing for the rapid creation of sleek and user-friendly interfaces.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Introduction to Bootstrap</p>
+                <p></p>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Introduction to Bootstrap</p>
+                <p></p>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Introduction to Bootstrap</p>
+                <p></p>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Introduction to Bootstrap</p>
+                <p></p>
+                </div>
+            </div>
+          </div>
           <div class="col">
-            <p class="h1">Bootstrap</p>
+            <p>234</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <p class="h2">Introduction to Bootstrap</p>
-          </div>
-        </div>
-      </div>
     </body>
 </html>
