--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -53,31 +53,87 @@
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Introduction to Bootstrap</p>
-                <p></p>
+                <p class="h2">Grid System and Responsiveness</p>
+                <p>At its core, Bootstrap utilizes a grid system based on a 12-column layout, offering developers a flexible and
+                  responsive structure for organizing content across various screen sizes and devices. This grid system simplifies
+                  the process of creating responsive designs, enabling websites to adapt seamlessly to desktops, tablets,
+                  and mobile phones without the need for extensive custom coding.</p>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Introduction to Bootstrap</p>
-                <p></p>
+                <p class="h2">Pre-styled Components and Utilities</p>
+                <p>One of the key features of Bootstrap is its extensive collection of pre-styled components and utilities,
+                  including navigation bars, buttons, forms, and typography. These components are designed with modern web
+                  design principles in mind, providing developers with a consistent and aesthetically pleasing toolkit for building
+                  visually appealing interfaces. Moreover, Bootstrap's modular architecture allows developers to customize and extend
+                  its functionality to suit the specific requirements of their projects.</p>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Introduction to Bootstrap</p>
-                <p></p>
+                <p class="h2">JavaScript Plugin Support</p>
+                <p>Bootstrap also includes robust support for JavaScript plugins, such as modals, carousels, and tooltips, which enhance
+                  the interactivity and user experience of web applications. These plugins are easy to integrate into Bootstrap-based
+                  projects and are thoroughly documented, making it straightforward for developers to incorporate advanced functionality
+                  into their designs.</p>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Introduction to Bootstrap</p>
-                <p></p>
+                <p class="h2">Active Community and Ecosystem</p>
+                <p>In addition to its rich set of features and components, Bootstrap boasts a vibrant and active community of developers
+                  who contribute plugins, themes, and extensions to the framework. This collaborative ecosystem fosters innovation and enables
+                  developers to leverage the collective expertise of the Bootstrap community to create cutting-edge web experiences.
+                  As a result, Bootstrap continues to be one of the most widely used front-end frameworks in the web development industry,
+                  powering millions of websites and applications across the globe.</p>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Getting started</p>
+                <div class="card">
+                <div class="card-body">
+                <p class="card-text">
+                  &lt;!doctype html>
+                  <br>&lt;html lang="en">
+                    <br>&emsp;&emsp;&emsp;&emsp;&lt;head>
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;meta charset="utf-8">
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;meta name="viewport" content="width=device-width, initial-scale=1">
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;title>Bootstrap demo&lt;/title>
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;crossorigin="anonymous">
+                    <br>&emsp;&emsp;&emsp;&emsp;&lt;/head>
+                    <br>&emsp;&emsp;&emsp;&emsp;&lt;body>
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;h1>Hello, world!&lt;/h1>
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;script 
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;crossorigin="anonymous">&lt;/script>
+                      <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;/script>
+                    <br>&emsp;&emsp;&emsp;&emsp;&lt;/body>
+                  <br>&lt;/html>
+                </p>
+                </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <p class="h2">Author</p>
+                <p>Kristiāns Beiša</p>
                 </div>
             </div>
           </div>
           <div class="col">
-            <p>234</p>
+            <div class="card">
+              <div class="card-body">
+                <div class="card-header text-bg-primary">Bootstrap Framework</div><br>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" class="card-img-bottom" alt="Bootstrap">
+                
+              </div>
+            </div>
           </div>
         </div>
     </body>
