--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="Boots.css" type="text/css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
+      </head>
     <body>
       <div class="container">
-        <div class="row">
+        <div class="row sticky-top bg-white">
           <div class="col-md-auto">
           <ul class="nav nav-pills">
             <li class="nav-item">
@@ -44,57 +44,62 @@
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Introduction to Bootstrap</p>
-                <p>Bootstrap is a popular front-end framework for developing responsive and mobile-first websites and web applications.
+                <h2>Introduction to Bootstrap</h2>
+                <p class="text-secondary"><span class="text-black">Bootstrap</span> is a popular front-end framework for developing responsive and mobile-first websites and web applications.
                   Initially developed by Mark Otto and Jacob Thornton at Twitter, it was released as an open-source project in 2011.
                   Bootstrap provides developers with a comprehensive set of HTML, CSS, and JavaScript components,
                   allowing for the rapid creation of sleek and user-friendly interfaces.</p>
+                  <hr>
               </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Grid System and Responsiveness</p>
+                <h2>Grid System and Responsiveness</h2>
                 <p>At its core, Bootstrap utilizes a grid system based on a 12-column layout, offering developers a flexible and
                   responsive structure for organizing content across various screen sizes and devices. This grid system simplifies
                   the process of creating responsive designs, enabling websites to adapt seamlessly to desktops, tablets,
                   and mobile phones without the need for extensive custom coding.</p>
+                  <hr>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Pre-styled Components and Utilities</p>
+                <h2>Pre-styled Components and Utilities</h2>
                 <p>One of the key features of Bootstrap is its extensive collection of pre-styled components and utilities,
                   including navigation bars, buttons, forms, and typography. These components are designed with modern web
                   design principles in mind, providing developers with a consistent and aesthetically pleasing toolkit for building
                   visually appealing interfaces. Moreover, Bootstrap's modular architecture allows developers to customize and extend
                   its functionality to suit the specific requirements of their projects.</p>
+                  <hr>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">JavaScript Plugin Support</p>
+                <h2>JavaScript Plugin Support</h2>
                 <p>Bootstrap also includes robust support for JavaScript plugins, such as modals, carousels, and tooltips, which enhance
                   the interactivity and user experience of web applications. These plugins are easy to integrate into Bootstrap-based
                   projects and are thoroughly documented, making it straightforward for developers to incorporate advanced functionality
                   into their designs.</p>
+                  <hr>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Active Community and Ecosystem</p>
+                <h2>Active Community and Ecosystem</h2>
                 <p>In addition to its rich set of features and components, Bootstrap boasts a vibrant and active community of developers
                   who contribute plugins, themes, and extensions to the framework. This collaborative ecosystem fosters innovation and enables
                   developers to leverage the collective expertise of the Bootstrap community to create cutting-edge web experiences.
                   As a result, Bootstrap continues to be one of the most widely used front-end frameworks in the web development industry,
                   powering millions of websites and applications across the globe.</p>
+                  <hr>
                 </div>
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Getting started</p>
+                <h2>Getting started</h2>
                 <div class="card">
                 <div class="card-body">
-                <p class="card-text">
+                <code class="text-black">
                   &lt;!doctype html>
                   <br>&lt;html lang="en">
                     <br>&emsp;&emsp;&emsp;&emsp;&lt;head>
@@ -113,8 +118,7 @@
                       <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;crossorigin="anonymous">&lt;/script>
                       <br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;/script>
                     <br>&emsp;&emsp;&emsp;&emsp;&lt;/body>
-                  <br>&lt;/html>
-                </p>
+                  <br>&lt;/html></code>
                 </div>
                 </div>
               </div>
@@ -127,11 +131,24 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
+            <div class="card px-2">
+              <div class="card-header text-bg-primary">Bootstrap Framework</div><br>
               <div class="card-body">
-                <div class="card-header text-bg-primary">Bootstrap Framework</div><br>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" class="card-img-bottom" alt="Bootstrap">
-                
+                <p></p>
+                <p class="h6">Original author(s)</p>
+                <p class="bold">Mark Otto, Jacob Thornton, and contributors</p>
+                <p class="h6">Initial release</p>
+                <p class="bold">August 19, 2011; 13 years ago</p>
+                <p class="h6">Stable release</p>
+                <p class="bold">v5.3.3 / 20 February 2024; 11 months ago</p>
+                <p class="h6">Written in</p>
+                <p class="bold">HTML, CSS and JavaScript</p>
+                <p class="h6">License</p>
+                <p class="bold">MIT License</p>
+                <p class="h6">Website</p>
+                <a href="https://getbootstrap.com">getbootstrap.com</a>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
               </div>
             </div>
           </div>
