--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Bootstrap</title>
 		<meta charset="utf-8">
@@ -136,22 +137,23 @@
               <div class="card-body">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" class="card-img-bottom" alt="Bootstrap">
                 <p></p>
-                <p class="h6">Original author(s)</p>
-                <p class="bold">Mark Otto, Jacob Thornton, and contributors</p>
-                <p class="h6">Initial release</p>
-                <p class="bold">August 19, 2011; 13 years ago</p>
-                <p class="h6">Stable release</p>
-                <p class="bold">v5.3.3 / 20 February 2024; 11 months ago</p>
-                <p class="h6">Written in</p>
-                <p class="bold">HTML, CSS and JavaScript</p>
-                <p class="h6">License</p>
-                <p class="bold">MIT License</p>
-                <p class="h6">Website</p>
+                <p class="h6"><b>Original author(s)</b></p>
+                <p>Mark Otto, Jacob Thornton, and contributors</p>
+                <p class="h6"><b>Initial release</b></p>
+                <p>August 19, 2011; 13 years ago</p>
+                <p class="h6"><b>Stable release</b></p>
+                <p>v5.3.3 / 20 February 2024; 11 months ago</p>
+                <p class="h6"><b>Written in</b></p>
+                <p>HTML, CSS and JavaScript</p>
+                <p class="h6"><b>License</b></p>
+                <p>MIT License</p>
+                <p class="h6"><b>Website</b></p>
                 <a href="https://getbootstrap.com">getbootstrap.com</a>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </body>
 </html>
