--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -11,29 +11,31 @@
       <div class="container">
         <div class="row sticky-top bg-white">
           <div class="col-md-auto">
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Introduction</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Grid System</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Components</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">JS Plugins</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Community</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Getting started</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Author</a>
-            </li>
-          </ul>
+          <nav>
+            <ul class="nav nav-pills">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Introduction</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Grid System</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Components</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">JS Plugins</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Community</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Getting started</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Author</a>
+              </li>
+            </ul>
+          </nav>
           </div>
         </div>
         <div class="row">
@@ -45,26 +47,31 @@
             </div>
             <div class="row">
               <div class="col">
+                <section>
                 <h2>Introduction to Bootstrap</h2>
                 <p class="text-secondary"><span class="text-black">Bootstrap</span> is a popular front-end framework for developing responsive and mobile-first websites and web applications.
                   Initially developed by Mark Otto and Jacob Thornton at Twitter, it was released as an open-source project in 2011.
                   Bootstrap provides developers with a comprehensive set of HTML, CSS, and JavaScript components,
                   allowing for the rapid creation of sleek and user-friendly interfaces.</p>
                   <hr>
+                </section>
               </div>
             </div>
             <div class="row">
               <div class="col">
+                <section>
                 <h2>Grid System and Responsiveness</h2>
                 <p>At its core, Bootstrap utilizes a grid system based on a 12-column layout, offering developers a flexible and
                   responsive structure for organizing content across various screen sizes and devices. This grid system simplifies
                   the process of creating responsive designs, enabling websites to adapt seamlessly to desktops, tablets,
                   and mobile phones without the need for extensive custom coding.</p>
                   <hr>
+                </section>
                 </div>
             </div>
             <div class="row">
               <div class="col">
+                <section>
                 <h2>Pre-styled Components and Utilities</h2>
                 <p>One of the key features of Bootstrap is its extensive collection of pre-styled components and utilities,
                   including navigation bars, buttons, forms, and typography. These components are designed with modern web
@@ -72,20 +79,24 @@
                   visually appealing interfaces. Moreover, Bootstrap's modular architecture allows developers to customize and extend
                   its functionality to suit the specific requirements of their projects.</p>
                   <hr>
+                </section>
                 </div>
             </div>
             <div class="row">
               <div class="col">
+                <section>
                 <h2>JavaScript Plugin Support</h2>
                 <p>Bootstrap also includes robust support for JavaScript plugins, such as modals, carousels, and tooltips, which enhance
                   the interactivity and user experience of web applications. These plugins are easy to integrate into Bootstrap-based
                   projects and are thoroughly documented, making it straightforward for developers to incorporate advanced functionality
                   into their designs.</p>
                   <hr>
+                </section>
                 </div>
             </div>
             <div class="row">
               <div class="col">
+                <section>
                 <h2>Active Community and Ecosystem</h2>
                 <p>In addition to its rich set of features and components, Bootstrap boasts a vibrant and active community of developers
                   who contribute plugins, themes, and extensions to the framework. This collaborative ecosystem fosters innovation and enables
@@ -93,6 +104,7 @@
                   As a result, Bootstrap continues to be one of the most widely used front-end frameworks in the web development industry,
                   powering millions of websites and applications across the globe.</p>
                   <hr>
+                </section>
                 </div>
             </div>
             <div class="row">
@@ -137,19 +149,21 @@
               <div class="card-body">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" class="card-img-bottom" alt="Bootstrap">
                 <p></p>
-                <p class="h6"><b>Original author(s)</b></p>
+                <section>
+                <h6><b>Original author(s)</b></h6>
                 <p>Mark Otto, Jacob Thornton, and contributors</p>
-                <p class="h6"><b>Initial release</b></p>
+                <h6><b>Initial release</b></h6>
                 <p>August 19, 2011; 13 years ago</p>
-                <p class="h6"><b>Stable release</b></p>
+                <h6><b>Stable release</b></h6>
                 <p>v5.3.3 / 20 February 2024; 11 months ago</p>
-                <p class="h6"><b>Written in</b></p>
+                <h6><b>Written in</b></h6>
                 <p>HTML, CSS and JavaScript</p>
-                <p class="h6"><b>License</b></p>
+                <h6><b>License</b></h6>
                 <p>MIT License</p>
-                <p class="h6"><b>Website</b></p>
+                <h6><b>Website</b></h6>
                 <a href="https://getbootstrap.com">getbootstrap.com</a>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                </section>
               </div>
             </div>
           </div>
