--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -42,7 +42,7 @@
           <div class="col-md-9">
             <div class="row">
               <div class="col">
-                <p class="h1">Bootstrap</p>
+                <h1>Bootstrap</h1>
               </div>
             </div>
             <div class="row">
@@ -138,7 +138,7 @@
             </div>
             <div class="row">
               <div class="col">
-                <p class="h2">Author</p>
+                <h2>Author</h2>
                 <p>Kristiāns Beiša</p>
                 </div>
             </div>
