--- a/Game.html
+++ b/Game.html
@@ -12,12 +12,11 @@
             <a class="active" href="index.html">Home</a>
             <a href="Game.html">Game</a>
             <a href="Todo.html">To do</a>
-            <a href="Bootstrap.html">Bootstrap</a>
+            <a href="Bootstrap4.html">Bootstrap</a>
             <br>
             <label id="buttonshow" for="buttonshowcheck">Show move buttons</label>
             <input type="checkbox" id="buttonshowcheck" onclick="Hidebuttons()">
         </div>
-</div>
     <div id="MainField">
         <div id="Cilveeks"></div>
         <div id="water1" class="obstacle"></div>
