--- a/Bootstrap4.html
+++ b/Bootstrap4.html
@@ -8,6 +8,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       </head>
     <body>
+      <div class="topnavbar">
+        <a class="active" href="index.html">Home</a>
+        <a href="Game.html">Game</a>
+        <a href="Todo.html">To do</a>
+        <a href="Bootstrap4.html">Bootstrap</a>
+        <br>
+        <label id="buttonshow" for="buttonshowcheck">Show move buttons</label>
+        <input type="checkbox" id="buttonshowcheck" onclick="Hidebuttons()">
+      </div>
       <div class="container">
         <div class="row sticky-top bg-white">
           <div class="col-md-auto">
