--- a/Game.html
+++ b/Game.html
@@ -48,6 +48,7 @@
         <div id="caveblocker3" class="obstacle"></div>
         <div id="RandomMover1" class="RandomMover"></div>
         <div id="RandomMover2" class="RandomMover"></div>
+	<div id="RandomMover3" class="RandomMover"></div>
         <div id="rock7"></div>
         <div id="rock7hitbox" class="obstacle"></div>
         <div id="rock8"></div>
