--- a/Game.html
+++ b/Game.html
@@ -12,11 +12,12 @@
             <a class="active" href="index.html">Home</a>
             <a href="Game.html">Game</a>
             <a href="Todo.html">To do</a>
-            <a href="Bootstrap4.html">Bootstrap</a>
+            <a href="Bootstrap.html">Bootstrap</a>
             <br>
             <label id="buttonshow" for="buttonshowcheck">Show move buttons</label>
             <input type="checkbox" id="buttonshowcheck" onclick="Hidebuttons()">
         </div>
+</div>
     <div id="MainField">
         <div id="Cilveeks"></div>
         <div id="water1" class="obstacle"></div>
@@ -40,6 +41,11 @@
         <div id="rock6hitbox" class="obstacle"></div>
         <div id="caveenter" class="teleport1"></div>
         <div id="caveblocker1" class="obstacle"></div>
+        <div id="homeenter" class="teleport1"></div>
+    </div>
+    <div id="HomeField">
+        <div id="Cilveeks2"></div>
+        <div id="homeleave" class="teleport1"></div>
     </div>
     <div id="CaveField">
         <div id="Cilveeks1"></div>
@@ -48,7 +54,6 @@
         <div id="caveblocker3" class="obstacle"></div>
         <div id="RandomMover1" class="RandomMover"></div>
         <div id="RandomMover2" class="RandomMover"></div>
-	<div id="RandomMover3" class="RandomMover"></div>
         <div id="rock7"></div>
         <div id="rock7hitbox" class="obstacle"></div>
         <div id="rock8"></div>
