--- a/Todo.html
+++ b/Todo.html
@@ -12,7 +12,7 @@
             <a class="active" href="index.html">Home</a>
             <a href="Game.html">Game</a>
             <a href="Todo.html">To do</a>
-            <a href="Bootstrap4.html">Bootstrap</a>
+            <a href="Bootstrap.html">Bootstrap</a>
           </div>
           <h1>To do</h1>
 
