--- a/Game.html
+++ b/Game.html
@@ -86,6 +86,7 @@
 
 
         <div id="caveleave" class="teleport1"></div>
+        <div id="cavenext" class="teleport1"></div>
 
 
         <div id="caveblocker2" class="obstacle"></div>
@@ -101,6 +102,23 @@
         <div id="rock8"></div>
         <div id="rock8hitbox" class="obstacle"></div>
     </div>
+    
+
+    <div id ="CaveField1">
+        <div id="Cilveeks3"></div>
+
+        <div id="cave1prev" class="teleport1"></div>
+        <div id="cave1next" class="teleport1"></div>
+    </div>
+
+
+    <div id ="CaveField2">
+        <div id="Cilveeks4"></div>
+
+        <div id="cave2prev" class="teleport1"></div>
+    </div>
+
+
     <br>
     <div id="button-container">
         <button type="button" id="upButton" class="control-button up-button">Up</button>
