--- a/Game.html
+++ b/Game.html
@@ -107,6 +107,62 @@
     <div id ="CaveField1">
         <div id="Cilveeks3"></div>
 
+        <div id="c1block1" class="obstacle"></div>
+        <div id="c1block2" class="obstacle"></div>
+        <div id="c1block3" class="obstacle"></div>
+        <div id="c1block4" class="obstacle"></div>
+        <div id="c1block5" class="obstacle"></div>
+        <div id="c1block6" class="obstacle"></div>
+        <div id="c1block7" class="obstacle"></div>
+        <div id="c1block8" class="obstacle"></div>
+        <div id="c1block9" class="obstacle"></div>
+        <div id="c1block10" class="obstacle"></div>
+        <div id="c1block11" class="obstacle"></div>
+        <div id="c1block12" class="obstacle"></div>
+        <div id="c1block13" class="obstacle"></div>
+        <div id="c1block14" class="obstacle"></div>
+        <div id="c1block15" class="obstacle"></div>
+        <div id="c1block16" class="obstacle"></div>
+        <div id="c1block17" class="obstacle"></div>
+        <div id="c1block18" class="obstacle"></div>
+        <div id="c1block19" class="obstacle"></div>
+        <div id="c1block20" class="obstacle"></div>
+        <div id="c1block21" class="obstacle"></div>
+        <div id="c1block22" class="obstacle"></div>
+        <div id="c1block23" class="obstacle"></div>
+        <div id="c1block24" class="obstacle"></div>
+        <div id="c1block25" class="obstacle"></div>
+        <div id="c1block26" class="obstacle"></div>
+        <div id="c1block27" class="obstacle"></div>
+        <div id="c1block28" class="obstacle"></div>
+        <div id="c1block29" class="obstacle"></div>
+        <div id="c1block30" class="obstacle"></div>
+        <div id="c1block31" class="obstacle"></div>
+        <div id="c1block32" class="obstacle"></div>
+        <div id="c1block33" class="obstacle"></div>
+        <div id="c1block34" class="obstacle"></div>
+        <div id="c1block35" class="obstacle"></div>
+        <div id="c1block36" class="obstacle"></div>
+        <div id="c1block37" class="obstacle"></div>
+        <div id="c1block38" class="obstacle"></div>
+        <div id="c1block39" class="obstacle"></div>
+        <div id="c1block40" class="obstacle"></div>
+        <div id="c1block41" class="obstacle"></div>
+        <div id="c1block42" class="obstacle"></div>
+        <div id="c1block43" class="obstacle"></div>
+        <div id="c1block44" class="obstacle"></div>
+        <div id="c1block45" class="obstacle"></div>
+        <div id="c1block46" class="obstacle"></div>
+        <div id="c1block47" class="obstacle"></div>
+        <div id="c1block48" class="obstacle"></div>
+        <div id="c1block49" class="obstacle"></div>
+        <div id="c1block50" class="obstacle"></div>
+
+
+
+        <div id="c1s1" class="slowZone"></div>
+        <div id="c1s2" class="slowZone"></div>
+
         <div id="cave1prev" class="teleport1"></div>
         <div id="cave1next" class="teleport1"></div>
     </div>
